--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -1,15 +1,22 @@
 # .github/workflows/pages.yml
 name: Deploy to GitHub Pages
+
 on:
   push:
     branches:
       - main  # oder master, je nach deinem Branch-Namen
+
+# DIESEN BLOCK HINZUFÜGEN:
+permissions:
+  contents: write
+
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+
       - name: Deploy
         uses: JamesIves/github-pages-deploy-action@v4
         with:
